ajout de la classe RechereEnFonctionDuNombreDeCoup, bug fix.